feat: Configure Homepage and reformat role syntax

--- a/roles/homeassistant/tasks/main.yaml
+++ b/roles/homeassistant/tasks/main.yaml
@@ -39,6 +39,7 @@
       homepage.name: Home Assistant
       homepage.icon: home-assistant.png
       homepage.href: http://homeassistant.home.derham.me/
+      homepage.description: Automation dashboard
     volumes:
       - "{{ app_dir.path }}:/config"
       - /etc/ssl/certs/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
