--- a/roles/unifi/tasks/main.yaml
+++ b/roles/unifi/tasks/main.yaml
@@ -22,6 +22,11 @@
       caddy.reverse_proxy: "{% raw %}{{upstreams https 8443}}{% endraw %}"
       caddy.reverse_proxy.transport: http
       caddy.reverse_proxy.transport.tls_insecure_skip_verify:
+      homepage.group: Utilities
+      homepage.name: Unifi Controller
+      homepage.icon: unifi-controller.png
+      homepage.href: http://unifi.home.derham.me/
+      homepage.description: Wi-Fi AP management
     volumes:
       - "{{ app_dir.path }}:/config"
       - /etc/ssl/certs/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
