--- a/roles/frigate/tasks/main.yaml
+++ b/roles/frigate/tasks/main.yaml
@@ -11,7 +11,7 @@
     dest: "{{ app_dir.path }}/config.yml"
     owner: "{{ user.name }}"
     group: "{{ user.name }}"
-    mode: '0744'
+    mode: "0744"
 
 - name: Start Frigate
   community.docker.docker_container:
@@ -23,6 +23,11 @@
     labels:
       caddy: frigate.home.derham.me
       caddy.reverse_proxy: "{% raw %}{{upstreams 5000}}{% endraw %}"
+      homepage.group: Automation
+      homepage.name: Frigate
+      homepage.icon: frigate.png
+      homepage.href: http://frigate.home.derham.me/
+      homepage.description: Network video recorder
     networks:
       - name: mosquitto
       - name: caddy
