--- a/roles/homepage/files/settings.yaml
+++ b/roles/homepage/files/settings.yaml
@@ -2,3 +2,5 @@ base: https://home.derham.me
 target: _self
 language: en-GB
 headerStyle: clean
+background: https://images.unsplash.com/photo-1502790671504-542ad42d5189?auto=format&fit=crop&w=2560&q
+cardBlur: sm
