--- a/roles/transmission/tasks/main.yaml
+++ b/roles/transmission/tasks/main.yaml
@@ -28,10 +28,10 @@
     capabilities:
       - NET_ADMIN
     sysctl:
-      "net.ipv4.conf.all.src_valid_mark": 1
-      "net.ipv6.conf.default.disable_ipv6": 1
-      "net.ipv6.conf.all.disable_ipv6": 1
-      "net.ipv6.conf.lo.disable_ipv6": 1
+      net.ipv4.conf.all.src_valid_mark: 1
+      net.ipv6.conf.default.disable_ipv6: 1
+      net.ipv6.conf.all.disable_ipv6: 1
+      net.ipv6.conf.lo.disable_ipv6: 1
     healthcheck:
       test: ping -c 1 www.google.com || exit 1
       interval: 30s
